Bug: Fix header positioning on Firefox; center header text in both states.

--- a/src/styles/base/_constants.less
+++ b/src/styles/base/_constants.less
@@ -3,10 +3,11 @@
 // ==================================================
 
 @font-family-default: 'Lato', sans-serif;
-@font-color-default: #2c2d30;
+@font-color-default: rgba(0, 0, 0, 0.85);
+@font-color-bold: rgba(0, 0, 0, 0.95);
+@font-color-gray-em: rgba(0, 0, 0, 0.58);
+@font-color-muted: rgba(0, 0, 0, 0.55);
 @font-color-blue: #68a3ee;
-@font-color-bold: #353535;
-@font-color-muted: #717274;
 @font-size-large: 2rem;
 @font-size-default: 1.6rem;
 @font-size-small: 1.45rem;
