--- a/src/styles/utils/_utils.less
+++ b/src/styles/utils/_utils.less
@@ -1,6 +1,15 @@
 @import "../base/_constants";
 
 
+.text-muted {
+    color: @font-color-muted;
+}
+
+.text-gray-em {
+    color: @font-color-gray-em;
+    font-weight: bold;
+}
+
 // default nowrap, row-direction flex container:
 .flex-row {
     display: flex;
